Fix responsiveness of contact page on small screens 350px & down

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -351,6 +351,16 @@
     }
 }
 
+/* For smaller screen sizes 350px and down */
+
+@media screen and (max-width: 350px) {
+    .contact {
+        margin: 0 auto;
+        padding: 10px;
+        width: 90%;
+    }
+}
+
 /* Thank you page */
 
 /* For tablet devices */
